# agentic-ai-june-2026-cohort

./: .gitignore  README.md
session1/: README.md
session1/1.prompts/scripts/: 1.prompts.md  2.request-body.json  2.system-user.sh  3.structured-request-body.json  3.structured-system-user.sh  4.structured-v2-system-user.sh  6.react-loop.sh
session1/2.stockresearch/src/stockresearch/: crew_v1_with_planning.py  crew_v2.py
session2/: README.md
session2/1.stockresearch/: .README.md.swp  .env.template  README.md  pyproject.toml  requirements.txt
session2/1.stockresearch/src/stockresearch/: agentCoreHandler.py  crew_v1.py  crew_v1_with_planning.py  crew_v2.py  crew_v3.py
session2/1.stockresearch/src/stockresearch/utils/: crew_executor.py  llm_factory.py
session2/2.stockresearch_infra/: README.md
session2/2.stockresearch_infra/src/: AgentCoreStack.py
session2/3.deepresearch/: .env.template  pyproject.toml
session2/3.deepresearch/src/deepresearch/: crew.py  crew_v1.py  crew_v2.py
session2/3.deepresearch/src/deepresearch/utils/: crew_executor.py
session3/: README.md
session3/1.deepresearch/: .env.template  .gitignore  README.md  pyproject.toml
session3/1.deepresearch/src/deepresearch/: crew_v1.py  crew_v2.py  crew_v3.py
session3/1.deepresearch/src/deepresearch/utils/: crew_executor.py  llm_factory.py
session3/2.stockresearch_infra/: README.md  app.py  cdk.json  generateRequirements.sh  pyproject.toml
session3/2.stockresearch_infra/src/: AgentCoreStack.py
session4/1.atlassian_mcp_server/: README.md
session4/2.jira_management/: .env.template  README.md  pyproject.toml
session4/2.jira_management/src/jiramanagement/: crew_v1.py  crew_v2.py
session4/2.jira_management/src/jiramanagement/utils/: crew_executor.py
session5/: README.md
session5/1.knowledgebase/: README-vector-store.md  README-vectorless-pageindex.md  README.md
session5/2.employeepolicy/: .env.template  README.md  pyproject.toml
session5/2.employeepolicy/src/employeepolicy/: crew_vector_rag.py  crew_vectorless_rag.py
session5/2.employeepolicy/src/employeepolicy/utils/: crew_executor.py  llm_hooks.py  mcp_compat.py  memory.py  session.py
