[project]
name = "stockresearch"
version = "0.1.0"
description = "stockResearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3",
    "langfuse",
    "openinference-instrumentation-crewai",
    "crewai",
    "crewai_tools",
    "yfinance>=1.3.0",
    "tavily-python",
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "bedrock-agentcore>=1.9.1"
]

[project.scripts]
stockresearch = "stockresearch.main:run"
run_crew = "stockresearch.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockresearch"]

[tool.crewai]
type = "crew"
