[project]
name = "deepresearch"
version = "0.1.0"
description = "deepresearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3",
    "langfuse",
    "openinference-instrumentation-crewai",
    "crewai",
    "crewai_tools",
    "tavily-python"
]

[project.scripts]
deepresearch = "deepresearch.main:run"
run_crew = "deepresearch.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
