[project]
name = "jiramanagement"
version = "0.1.0"
description = "Jira management agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3",
    "langfuse",
    "openinference-instrumentation-crewai",
    "litellm",
    "openinference-instrumentation-litellm",
    "crewai[anthropic,mcp,tools]",
    "opentelemetry-exporter-otlp-proto-http",
    "openlit",
    "litellm",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "mcp",
    "crewai-tools[mcp]"
]

[project.scripts]
jiramanagement = "jiramanagement.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jiramanagement"]

[tool.crewai]
type = "crew"
