[project]
name = "employeepolicy"
version = "0.1.0"
description = "employeepolicy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3",
    "crewai[anthropic,mcp,tools]",
    "langfuse>=3.5.0",
    "openinference-instrumentation-crewai",
    "openinference-instrumentation-litellm",
    "opentelemetry-exporter-otlp-proto-http",
    "openlit",
    "crewai-tools",
    "litellm",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk",
    "mcp",
    "crewai-tools[mcp]",
    "fastapi>=0.139.2",
]

[project.scripts]
employeepolicy = "employeepolicy.main:run"
run_crew = "employeepolicy.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
